local api & adaptive network module